--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="#"><img src="images/logo.png" alt="Logo de Josué González Martínez"></a>
+            <a href="#"><img src="images/logo.png" alt="Logo de TEDyC"></a>
         </div>
 
         <nav>
@@ -112,7 +112,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Josué González Martínez</p>
+        <p>&copy; 2024 TEDyC</p>
         <div class="social-icons">
             <a href="https://www.linkedin.com/in/josué-gonzález94/" class="icon-link"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/JoshSlash" class="icon-link"><i class="fab fa-github"></i></a>
