--- a/index.html
+++ b/index.html
@@ -37,9 +37,17 @@
 
 
         <section id="about" class="section">
-            <h2>Sobre Mí</h2>
-            <p>Soy Josué González Martínez, Licenciado en Ciencias Computacionales con experiencia en desarrollo de software, páginas web y soporte técnico. Mi pasión es crear soluciones innovadoras que ayuden a mejorar procesos y servicios en diversas industrias.</p>
-            <p>Actualmente estoy cursando una Licenciatura en Desarrollo de Software para seguir ampliando mis conocimientos y habilidades en el campo.</p>
+            <h2>Sobre Nostros</h2>
+            <p>Somos un equipo independiente con más de 8 años de experiencia en desarrollo web.</p>
+            <p>Nos especializamos en soluciones a medida que integran funcionalidad, estética y tecnología moderna.</p>
+            <p>Nuestros proyectos realizados incluyen:<p>
+                <ul>
+                    <li>Sitios web para escuelas.</li>
+                    <li>Tiendas en línea.</li>
+                    <li>Blogs.</li>
+                    <li>Plataformas personalizadas para sectores como actuaría y comercio electrónico.</li>
+                </ul>
+            <p>Enfocándonos en crear experiencias digitales que cumplan con los objetivos del cliente y ofrezcan una excelente experiencia de usuario.<p>
         </section>
 
 <section id="web-projects" class="web-projects">
