--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <a href="https://wa.me/7771094790" target="_blank" class="whatsapp">
             <img src="images/whatsapp-icon.png" alt="WhatsApp Icon"> WhatsApp
         </a>
-        <a href="mailto:josuegm19@icloud.com" class="email">
+        <a href="mailto:j2a9493@gmail.com" class="email">
             <img src="images/email-icon.png" alt="Email Icon"> Correo Electrónico
             </a>
         </div>
