--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <nav>
             <ul>
-                <li><a href="#about">Sobre Mí</a></li>
+                <li><a href="#about">Sobre Nosotro</a></li>
                 <li><a href="#projects">Proyectos</a></li>
                 <li><a href="#contact">Contacto</a></li>
             </ul>
