--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
         <section id="about" class="section">
             <h2>Sobre Nostros</h2>
-            <p>Somos un equipo independiente con más de 8 años de experiencia en desarrollo web.</p>
-            <p>Nos especializamos en soluciones a medida que integran funcionalidad, estética y tecnología moderna.</p>
-            <p>Nuestros proyectos realizados incluyen:<p>
-                <ul>
+            <p style="text-align: justify;">Somos un equipo independiente con más de 8 años de experiencia en desarrollo web.</p>
+            <p style="text-align: justify;">Nos especializamos en soluciones a medida que integran funcionalidad, estética y tecnología moderna.</p>
+            <p style="text-align: justify;">Nuestros proyectos realizados incluyen:<p>
+                <ul style="text-align: justify;">
                     <li>Sitios web para escuelas.</li>
                     <li>Tiendas en línea.</li>
                     <li>Blogs.</li>
